[gd_scene load_steps=4 format=3 uid="uid://c0qfkwbesyuxh"]

[ext_resource type="Script" path="res://main.gd" id="1_x8enw"]
[ext_resource type="Script" path="res://buttons_connection.gd" id="2_4m1ns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsms6"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("user_container", "message_container", "text_input", "scroll_msg_container")]
script = ExtResource("1_x8enw")
user_container = NodePath("CanvasLayer/Control/PanelContainer/SplitContainer/PanelContainer/MarginContainer/ScrollContainer/UserContainer")
message_container = NodePath("CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/MarginContainer2/ScrollMessageContainer/MarginContainer/MessageContainer")
text_input = NodePath("CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/TextInput")
scroll_msg_container = NodePath("CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/MarginContainer2/ScrollMessageContainer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SplitContainer" type="SplitContainer" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/PanelContainer"]
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="UserContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/PanelContainer/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer"]
layout_mode = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollMessageContainer" type="ScrollContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/MarginContainer2/ScrollMessageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/margin_right = 8

[node name="MessageContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/MarginContainer2/ScrollMessageContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 8

[node name="TextInput" type="LineEdit" parent="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -98.0
offset_right = 216.0
grow_vertical = 0
script = ExtResource("2_4m1ns")
metadata/_edit_use_anchors_ = true

[node name="ConnectionInput" type="Control" parent="CanvasLayer/Control2"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.01
offset_bottom = -0.979996
grow_vertical = 0

[node name="connect" type="Button" parent="CanvasLayer/Control2/ConnectionInput"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.01
offset_left = 36.0
offset_top = 61.0
offset_right = -40.0
offset_bottom = -6.98
grow_vertical = 0
focus_mode = 0
text = "connect"

[node name="ip_input" type="LineEdit" parent="CanvasLayer/Control2/ConnectionInput"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.01
offset_left = 36.0
offset_top = 21.0
offset_right = -40.0
offset_bottom = -46.98
focus_mode = 1
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_jsms6")
placeholder_text = "server IP"

[node name="LoginInput" type="Control" parent="CanvasLayer/Control2"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.01
offset_bottom = -0.979996
grow_vertical = 0

[node name="login" type="Button" parent="CanvasLayer/Control2/LoginInput"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.01
offset_left = 36.0
offset_top = 61.0
offset_right = -40.0
offset_bottom = -6.98
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "login"

[node name="username_input" type="LineEdit" parent="CanvasLayer/Control2/LoginInput"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.158
anchor_right = 0.963
anchor_bottom = 1.01
offset_left = 36.0
offset_top = 5.516
offset_right = -32.008
offset_bottom = -46.98
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 1
placeholder_text = "username"

[node name="disconnect" type="Button" parent="CanvasLayer/Control2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.01
offset_left = 36.0
offset_top = 61.0
offset_right = -40.0
offset_bottom = -6.98
grow_vertical = 0
focus_mode = 0
text = "disconnect"

[connection signal="text_submitted" from="CanvasLayer/Control/PanelContainer/SplitContainer/MarginContainer2/VBoxContainer/TextInput" to="." method="_on_message_submitted"]
[connection signal="button_down" from="CanvasLayer/Control2/ConnectionInput/connect" to="CanvasLayer/Control2" method="_on_connect_button_down"]
[connection signal="button_down" from="CanvasLayer/Control2/LoginInput/login" to="CanvasLayer/Control2" method="_on_login_button_down"]
[connection signal="button_down" from="CanvasLayer/Control2/disconnect" to="CanvasLayer/Control2" method="_on_disconnect_button_down"]
